# FiremodelBoundaryReader

./: .gitignore  BoundaryReader.sln  BoundaryReader.vcxproj  BoundaryReader.vcxproj.filters  CMakeLists.txt  analysis.hpp  apdl_io.hpp  attacher.hpp  debug.hpp  element_basic.hpp  elements_io.hpp  fds_basic.hpp  fds_io.hpp  fs.hpp  graphics.hpp  io.hpp  main.cpp  proxy.hpp  readme.md  shared.hpp  tool.hpp  types.hpp
example/10/: .elements  .nodes
example/20/: .elements  .nodes
example/8/: .elements  .nodes
